--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.11.0",
     "react-spinners": "^0.13.5",
+    "vercel": "^33.6.1",
     "zustand": "^3.6.9"
   },
   "devDependencies": {
